# boost_json_archive

./: .all-contributorsrc  .gitignore  CMakeLists.txt  README.md  boost_json_archiveConfig.cmake.in  conan2file.py  conanfile.py
.github/workflows/: cmake-single-platform.yml
cmake/: CodeCoverage.cmake  Config.cmake  Lib.cmake  clang-format.cmake
demos/: oarchive.cpp
include/boost/: JsonContext.hpp
include/boost/archive/: TraitsDetailsHelper.hpp  json_iarchive.hpp  json_oarchive.hpp
src/: json_iarchive.cpp
unit-tests/: BoostSerializationJson.hpp  gcout.hpp  main.cpp  structs.hpp
